--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           <div class="hero-main-text">This website is awesome</div>
           <div class="hero-secondary-text">
             This website has some subtext that goes here under the main title. It’s a smaller font and the color is
-            lower
-            contrast
+            lower contrast
           </div>
           <button class="hero-button">Sign up</button>
         </div>
@@ -39,9 +38,35 @@
   </header>
 
   <main>
+    <div class="information-header-text">
+      <div class="random-info">Some Random Information.</div>
+      <div class="box-layout">
+        <!-- Box 1 -->
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box-subtext">this is some subtext under an illustration or image</div>
+        </div>
 
+        <!-- Box 2 -->
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box-subtext">this is some subtext under an illustration or image</div>
+        </div>
+
+        <!-- Box 3 -->
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box-subtext">this is some subtext under an illustration or image</div>
+        </div>
+
+        <!-- Box 4 -->
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box-subtext">this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+    </div>
   </main>
-
 </body>
 
 </html>
