--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
         </div>
       </div>
     </div>
+
+    <!-- Feedback Section -->
+    <div class="feedback-section">
+      <div class="testimonial">
+        <p>This is an inspiring quote, or a testimonial from a customer.Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <div class="customer-username">
+          -Thor, God of Thunder
+        </div>
+      </div>
+    </div>
   </main>
 </body>
 
