--- a/index.html
+++ b/index.html
@@ -70,9 +70,27 @@
     <!-- Feedback Section -->
     <div class="feedback-section">
       <div class="testimonial">
-        <p>This is an inspiring quote, or a testimonial from a customer.Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p>This is an inspiring quote, or a testimonial from a customer.Maybe it's just filling up space, or maybe
+          people will actually read it. Who knows? All i know is that it looks nice.</p>
         <div class="customer-username">
           -Thor, God of Thunder
+        </div>
+      </div>
+    </div>
+
+    <!-- CalltoAction Section -->
+    <div class="CalltoAction">
+      <div class="action-container">
+        <div class="action-content">
+          <div class="content1">
+            <p>Call to action! It's time!</p>
+          </div>
+          <div class="content2">
+            <p>Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <div class="signup">
+            <button class="action">Sign up</button>
+          </div>
         </div>
       </div>
     </div>
