Added an footer to website

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       </div>
     </div>
   </main>
+
+  <!-- Footer Section -->
+   <footer>
+    <p>Copyright &copy; The Odin Project 2021</p>
+   </footer>
 </body>
 
 </html>
